--- a/archives/toutiao-search/2024-04-04.md
+++ b/archives/toutiao-search/2024-04-04.md
@@ -1,57 +1,73 @@
 # 2024-04-04
 
-共 302 条
+共 315 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 04 2024 21:00:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 04 2024 22:00:52 GMT+0800 (China Standard Time) -->
 1. [美财长耶伦抵达广州](https://so.toutiao.com/search?keyword=美财长耶伦抵达广州)
-1. [全球金价为何如此疯狂](https://so.toutiao.com/search?keyword=全球金价为何如此疯狂)
+1. [外卖员闯红灯撞到老人后情绪崩溃](https://so.toutiao.com/search?keyword=外卖员闯红灯撞到老人后情绪崩溃)
 1. [清明时节话清明](https://so.toutiao.com/search?keyword=清明时节话清明)
-1. [财政部副部长廖岷与耶伦握手交谈](https://so.toutiao.com/search?keyword=财政部副部长廖岷与耶伦握手交谈)
-1. [碾压2名小孩的奔驰司机已投案](https://so.toutiao.com/search?keyword=碾压2名小孩的奔驰司机已投案)
-1. [专家：以色列企图拉美国和伊朗下场](https://so.toutiao.com/search?keyword=专家：以色列企图拉美国和伊朗下场)
-1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
 1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
-1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
-1. [江西风雹灾害已致31.3万人受灾](https://so.toutiao.com/search?keyword=江西风雹灾害已致31.3万人受灾)
+1. [碾压2名小孩的奔驰司机已投案](https://so.toutiao.com/search?keyword=碾压2名小孩的奔驰司机已投案)
+1. [全球金价为何如此疯狂](https://so.toutiao.com/search?keyword=全球金价为何如此疯狂)
+1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
+1. [克宫：俄与北约已进入直接对抗](https://so.toutiao.com/search?keyword=克宫：俄与北约已进入直接对抗)
+1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
+1. [母女二人从店里出来被失控车辆撞上](https://so.toutiao.com/search?keyword=母女二人从店里出来被失控车辆撞上)
 1. [罪犯史泰龙被执行死刑](https://so.toutiao.com/search?keyword=罪犯史泰龙被执行死刑)
 1. [马英九祭拜黄帝后哽咽发声](https://so.toutiao.com/search?keyword=马英九祭拜黄帝后哽咽发声)
 1. [地震损失6000万美元？台积电辟谣](https://so.toutiao.com/search?keyword=地震损失6000万美元？台积电辟谣)
+1. [以色列冒险袭击伊朗的三重动机](https://so.toutiao.com/search?keyword=以色列冒险袭击伊朗的三重动机)
 1. [今年清明为何是4月4日](https://so.toutiao.com/search?keyword=今年清明为何是4月4日)
+1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
+1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
 1. [蔡崇信：阿里过去几年忘了真正客户](https://so.toutiao.com/search?keyword=蔡崇信：阿里过去几年忘了真正客户)
-1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
-1. [小米SU7已经有祭祀版纸扎车了](https://so.toutiao.com/search?keyword=小米SU7已经有祭祀版纸扎车了)
+1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
+1. [财政部副部长廖岷与耶伦握手交谈](https://so.toutiao.com/search?keyword=财政部副部长廖岷与耶伦握手交谈)
+1. [大广高速14车连撞疑因旁边烧荒所致](https://so.toutiao.com/search?keyword=大广高速14车连撞疑因旁边烧荒所致)
+1. [交警通报“小车撞便利店”：4人受伤](https://so.toutiao.com/search?keyword=交警通报“小车撞便利店”：4人受伤)
+1. [烈士父母赴儿子生前部队为其扫墓](https://so.toutiao.com/search?keyword=烈士父母赴儿子生前部队为其扫墓)
 1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
 1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
+1. [律师称“骨灰房”或涉嫌违法](https://so.toutiao.com/search?keyword=律师称“骨灰房”或涉嫌违法)
+1. [地震预警App收10元年费 开发者回应](https://so.toutiao.com/search?keyword=地震预警App收10元年费+开发者回应)
+1. [房主回应平移别墅：系违建整改之策](https://so.toutiao.com/search?keyword=房主回应平移别墅：系违建整改之策)
+1. [姜爷爷离开卧龙神树坪](https://so.toutiao.com/search?keyword=姜爷爷离开卧龙神树坪)
+1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
+1. [男子火锅店打架用锅底泼人 警方通报](https://so.toutiao.com/search?keyword=男子火锅店打架用锅底泼人+警方通报)
+1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
+1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
+1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
+1. [女子经常在楼道放火烧纸墙都被熏黑](https://so.toutiao.com/search?keyword=女子经常在楼道放火烧纸墙都被熏黑)
+1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
+1. [开封王婆说自己是家里的润滑剂](https://so.toutiao.com/search?keyword=开封王婆说自己是家里的润滑剂)
+1. [央视认证《追风者》是佳作](https://so.toutiao.com/search?keyword=央视认证《追风者》是佳作)
+1. [清明节娃哈哈原总部门口摆满鲜花](https://so.toutiao.com/search?keyword=清明节娃哈哈原总部门口摆满鲜花)
+1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
+1. [研究：微塑料会严重损害造血系统](https://so.toutiao.com/search?keyword=研究：微塑料会严重损害造血系统)
+1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
+1. [31万买新车不到一个月就短路又漏油](https://so.toutiao.com/search?keyword=31万买新车不到一个月就短路又漏油)
+1. [威姆斯：我已准备好季后赛](https://so.toutiao.com/search?keyword=威姆斯：我已准备好季后赛)
+1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
+1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
+1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
+1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
+1. [鲍威尔称过早降息或非常具有破坏性](https://so.toutiao.com/search?keyword=鲍威尔称过早降息或非常具有破坏性)
+1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
+1. [专家：以色列企图拉美国和伊朗下场](https://so.toutiao.com/search?keyword=专家：以色列企图拉美国和伊朗下场)
+1. [江西风雹灾害已致31.3万人受灾](https://so.toutiao.com/search?keyword=江西风雹灾害已致31.3万人受灾)
+1. [小米SU7已经有祭祀版纸扎车了](https://so.toutiao.com/search?keyword=小米SU7已经有祭祀版纸扎车了)
 1. [小米汽车要求供应商月产1万辆](https://so.toutiao.com/search?keyword=小米汽车要求供应商月产1万辆)
 1. [博主：“骨灰房”扎堆是因墓地太贵](https://so.toutiao.com/search?keyword=博主：“骨灰房”扎堆是因墓地太贵)
-1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
 1. [小米汽车贷款未通过锁单后不可退定](https://so.toutiao.com/search?keyword=小米汽车贷款未通过锁单后不可退定)
-1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
 1. [莫斯科遭遇强风已致2死17伤](https://so.toutiao.com/search?keyword=莫斯科遭遇强风已致2死17伤)
-1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
-1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
-1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
 1. [“消费降级”的香港人正挤爆深圳](https://so.toutiao.com/search?keyword=“消费降级”的香港人正挤爆深圳)
-1. [烈士父母赴儿子生前部队为其扫墓](https://so.toutiao.com/search?keyword=烈士父母赴儿子生前部队为其扫墓)
-1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
-1. [研究：微塑料会严重损害造血系统](https://so.toutiao.com/search?keyword=研究：微塑料会严重损害造血系统)
-1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
-1. [开封王婆说自己是家里的润滑剂](https://so.toutiao.com/search?keyword=开封王婆说自己是家里的润滑剂)
-1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
-1. [男子火锅店打架用锅底泼人 警方通报](https://so.toutiao.com/search?keyword=男子火锅店打架用锅底泼人+警方通报)
-1. [媒体：别在孩子身上乱玩辛者库的梗](https://so.toutiao.com/search?keyword=媒体：别在孩子身上乱玩辛者库的梗)
 1. [专家：万达获投资拆掉地产业一暗雷](https://so.toutiao.com/search?keyword=专家：万达获投资拆掉地产业一暗雷)
-1. [30年殡葬从业者：尽情活着就好](https://so.toutiao.com/search?keyword=30年殡葬从业者：尽情活着就好)
-1. [在执法车上呕吐后死亡男子家属发声](https://so.toutiao.com/search?keyword=在执法车上呕吐后死亡男子家属发声)
 1. [福宝在四川的家里嘎嘎炫饭](https://so.toutiao.com/search?keyword=福宝在四川的家里嘎嘎炫饭)
-1. [交警通报“小车撞便利店”：4人受伤](https://so.toutiao.com/search?keyword=交警通报“小车撞便利店”：4人受伤)
-1. [学校回应有学生抗议清明节不放假](https://so.toutiao.com/search?keyword=学校回应有学生抗议清明节不放假)
 1. [央媒：让娃做饭幼儿园值得全国推广](https://so.toutiao.com/search?keyword=央媒：让娃做饭幼儿园值得全国推广)
 1. [国足世界排名第88位](https://so.toutiao.com/search?keyword=国足世界排名第88位)
 1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
 1. [伊朗称恐袭已致11名士兵死亡](https://so.toutiao.com/search?keyword=伊朗称恐袭已致11名士兵死亡)
-1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
 1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
 1. [福宝开启为期一个月的隔离生活](https://so.toutiao.com/search?keyword=福宝开启为期一个月的隔离生活)
 1. [英雄从未远去](https://so.toutiao.com/search?keyword=英雄从未远去)
@@ -63,9 +79,7 @@
 1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
 1. [河南卫视清明奇妙游拍摄现场曝光](https://so.toutiao.com/search?keyword=河南卫视清明奇妙游拍摄现场曝光)
 1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
-1. [31万买新车不到一个月就短路又漏油](https://so.toutiao.com/search?keyword=31万买新车不到一个月就短路又漏油)
 1. [清明期间多地群众自发祭拜英烈](https://so.toutiao.com/search?keyword=清明期间多地群众自发祭拜英烈)
-1. [地震预警App收10元年费 开发者回应](https://so.toutiao.com/search?keyword=地震预警App收10元年费+开发者回应)
 1. [杭州00后车主提前数小时到店提SU7](https://so.toutiao.com/search?keyword=杭州00后车主提前数小时到店提SU7)
 1. [吉林有学校组织学生到烈士陵园扫墓](https://so.toutiao.com/search?keyword=吉林有学校组织学生到烈士陵园扫墓)
 1. [日本福岛县近海发生6.0级地震](https://so.toutiao.com/search?keyword=日本福岛县近海发生6.0级地震)
@@ -89,7 +103,6 @@
 1. [《惜花芷》开局就抄家](https://so.toutiao.com/search?keyword=《惜花芷》开局就抄家)
 1. [众人吟唱《黄帝颂》缅怀轩辕黄帝](https://so.toutiao.com/search?keyword=众人吟唱《黄帝颂》缅怀轩辕黄帝)
 1. [乌外长：西方供乌武器根本不够](https://so.toutiao.com/search?keyword=乌外长：西方供乌武器根本不够)
-1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
 1. [吉林大广高速14车连撞 有人员受伤](https://so.toutiao.com/search?keyword=吉林大广高速14车连撞+有人员受伤)
 1. [盐湖股份称未受青海地震影响](https://so.toutiao.com/search?keyword=盐湖股份称未受青海地震影响)
 1. [地震大楼倒塌瞬间女子拔腿就跑](https://so.toutiao.com/search?keyword=地震大楼倒塌瞬间女子拔腿就跑)
