--- a/archives/toutiao-search/2024-04-05.md
+++ b/archives/toutiao-search/2024-04-05.md
@@ -1,61 +1,70 @@
 # 2024-04-05
 
-共 62 条
+共 69 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 05 2024 01:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Fri Apr 05 2024 02:00:53 GMT+0800 (China Standard Time) -->
 1. [外卖员闯红灯撞到老人后情绪崩溃](https://so.toutiao.com/search?keyword=外卖员闯红灯撞到老人后情绪崩溃)
 1. [美财长耶伦抵达广州](https://so.toutiao.com/search?keyword=美财长耶伦抵达广州)
 1. [清明时节话清明](https://so.toutiao.com/search?keyword=清明时节话清明)
-1. [母女二人从店里出来被失控车辆撞上](https://so.toutiao.com/search?keyword=母女二人从店里出来被失控车辆撞上)
 1. [全球金价为何如此疯狂](https://so.toutiao.com/search?keyword=全球金价为何如此疯狂)
-1. [非洲小象踩到自己的鼻子痛到缩起来](https://so.toutiao.com/search?keyword=非洲小象踩到自己的鼻子痛到缩起来)
 1. [交警通报“小车撞便利店”：4人受伤](https://so.toutiao.com/search?keyword=交警通报“小车撞便利店”：4人受伤)
-1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
 1. [以色列冒险袭击伊朗的三重动机](https://so.toutiao.com/search?keyword=以色列冒险袭击伊朗的三重动机)
-1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
-1. [耶伦：美不想与华经济脱钩](https://so.toutiao.com/search?keyword=耶伦：美不想与华经济脱钩)
+1. [90后用87个账户操纵股价获利9000万](https://so.toutiao.com/search?keyword=90后用87个账户操纵股价获利9000万)
+1. [母女二人从店里出来被失控车辆撞上](https://so.toutiao.com/search?keyword=母女二人从店里出来被失控车辆撞上)
+1. [泰国两派数千只猴子打群架](https://so.toutiao.com/search?keyword=泰国两派数千只猴子打群架)
+1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
 1. [罪犯史泰龙被执行死刑](https://so.toutiao.com/search?keyword=罪犯史泰龙被执行死刑)
+1. [耶伦：美不想与华经济脱钩](https://so.toutiao.com/search?keyword=耶伦：美不想与华经济脱钩)
 1. [地震损失6000万美元？台积电辟谣](https://so.toutiao.com/search?keyword=地震损失6000万美元？台积电辟谣)
 1. [马英九祭拜黄帝后哽咽发声](https://so.toutiao.com/search?keyword=马英九祭拜黄帝后哽咽发声)
-1. [克宫：俄与北约已进入直接对抗](https://so.toutiao.com/search?keyword=克宫：俄与北约已进入直接对抗)
-1. [房主回应平移别墅：违建整改](https://so.toutiao.com/search?keyword=房主回应平移别墅：违建整改)
-1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
-1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
-1. [泰国两派数千只猴子打群架](https://so.toutiao.com/search?keyword=泰国两派数千只猴子打群架)
+1. [非洲小象踩到自己的鼻子痛到缩起来](https://so.toutiao.com/search?keyword=非洲小象踩到自己的鼻子痛到缩起来)
 1. [俄罗斯就法国对乌派兵可能性发警告](https://so.toutiao.com/search?keyword=俄罗斯就法国对乌派兵可能性发警告)
-1. [华南F3拜山祭祖：遇山开山遇水撑船](https://so.toutiao.com/search?keyword=华南F3拜山祭祖：遇山开山遇水撑船)
-1. [地震预警App收10元年费 开发者回应](https://so.toutiao.com/search?keyword=地震预警App收10元年费+开发者回应)
-1. [伊朗最高领袖：以色列将被扇耳光](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将被扇耳光)
-1. [《与凤行》沈璃事后翻脸不认人](https://so.toutiao.com/search?keyword=《与凤行》沈璃事后翻脸不认人)
+1. [男子举报缺斤少两遭商家掐脖殴打](https://so.toutiao.com/search?keyword=男子举报缺斤少两遭商家掐脖殴打)
+1. [公园现“爬行锻炼大军”](https://so.toutiao.com/search?keyword=公园现“爬行锻炼大军”)
 1. [沙利文肋骨骨折](https://so.toutiao.com/search?keyword=沙利文肋骨骨折)
-1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
-1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
+1. [房主回应平移别墅：违建整改](https://so.toutiao.com/search?keyword=房主回应平移别墅：违建整改)
+1. [《与凤行》沈璃事后翻脸不认人](https://so.toutiao.com/search?keyword=《与凤行》沈璃事后翻脸不认人)
+1. [地震预警App收10元年费 开发者回应](https://so.toutiao.com/search?keyword=地震预警App收10元年费+开发者回应)
+1. [哈尔滨22岁男子被多名未成年人围殴](https://so.toutiao.com/search?keyword=哈尔滨22岁男子被多名未成年人围殴)
 1. [媒体：耶伦来谈 美要想清几个问题](https://so.toutiao.com/search?keyword=媒体：耶伦来谈+美要想清几个问题)
 1. [伊朗以色列可能爆发直接冲突吗](https://so.toutiao.com/search?keyword=伊朗以色列可能爆发直接冲突吗)
-1. [律师称“骨灰房”或涉嫌违法](https://so.toutiao.com/search?keyword=律师称“骨灰房”或涉嫌违法)
-1. [伊朗安全部队击毙16名恐怖分子](https://so.toutiao.com/search?keyword=伊朗安全部队击毙16名恐怖分子)
+1. [麻辣烫原材料节前从全国运往天水](https://so.toutiao.com/search?keyword=麻辣烫原材料节前从全国运往天水)
+1. [为了卖掉房子 她做了半年中介](https://so.toutiao.com/search?keyword=为了卖掉房子+她做了半年中介)
+1. [华南F3拜山祭祖：遇山开山遇水撑船](https://so.toutiao.com/search?keyword=华南F3拜山祭祖：遇山开山遇水撑船)
+1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
+1. [克宫：俄与北约已进入直接对抗](https://so.toutiao.com/search?keyword=克宫：俄与北约已进入直接对抗)
+1. [77岁美财长耶伦时隔9月再访华](https://so.toutiao.com/search?keyword=77岁美财长耶伦时隔9月再访华)
 1. [“我在殡仪馆当遗体接抬工”](https://so.toutiao.com/search?keyword=“我在殡仪馆当遗体接抬工”)
+1. [救人副镇长失联17小时后遗体被找到](https://so.toutiao.com/search?keyword=救人副镇长失联17小时后遗体被找到)
+1. [野猪进村攻击老人 村民持棍棒驱赶](https://so.toutiao.com/search?keyword=野猪进村攻击老人+村民持棍棒驱赶)
+1. [伊朗安全部队击毙16名恐怖分子](https://so.toutiao.com/search?keyword=伊朗安全部队击毙16名恐怖分子)
+1. [上海南站火车换乘地铁无需二次安检](https://so.toutiao.com/search?keyword=上海南站火车换乘地铁无需二次安检)
 1. [今年清明为何是4月4日](https://so.toutiao.com/search?keyword=今年清明为何是4月4日)
+1. [律师称“骨灰房”或涉嫌违法](https://so.toutiao.com/search?keyword=律师称“骨灰房”或涉嫌违法)
+1. [蔡崇信：阿里过去几年忘了真正客户](https://so.toutiao.com/search?keyword=蔡崇信：阿里过去几年忘了真正客户)
+1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
+1. [财政部副部长廖岷与耶伦握手交谈](https://so.toutiao.com/search?keyword=财政部副部长廖岷与耶伦握手交谈)
+1. [男子扫墓遭红火蚁咬伤休克被送医](https://so.toutiao.com/search?keyword=男子扫墓遭红火蚁咬伤休克被送医)
+1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
+1. [伊朗东南部两地军事总部遭恐袭](https://so.toutiao.com/search?keyword=伊朗东南部两地军事总部遭恐袭)
+1. [《乘风踏浪》乔杉评价杨子姗](https://so.toutiao.com/search?keyword=《乘风踏浪》乔杉评价杨子姗)
+1. [俄方：将回应韩国“不友好”之举](https://so.toutiao.com/search?keyword=俄方：将回应韩国“不友好”之举)
+1. [开封王婆：现在上台心里有负担](https://so.toutiao.com/search?keyword=开封王婆：现在上台心里有负担)
+1. [广西人祭祖开始走水路了](https://so.toutiao.com/search?keyword=广西人祭祖开始走水路了)
+1. [央视认证《追风者》是佳作](https://so.toutiao.com/search?keyword=央视认证《追风者》是佳作)
+1. [为何两岸同胞要祭拜轩辕黄帝](https://so.toutiao.com/search?keyword=为何两岸同胞要祭拜轩辕黄帝)
 1. [专家：以色列企图拉美国和伊朗下场](https://so.toutiao.com/search?keyword=专家：以色列企图拉美国和伊朗下场)
 1. [专家：美方应言行一致落实对华承诺](https://so.toutiao.com/search?keyword=专家：美方应言行一致落实对华承诺)
 1. [小米汽车回应退款问题](https://so.toutiao.com/search?keyword=小米汽车回应退款问题)
-1. [蔡崇信：阿里过去几年忘了真正客户](https://so.toutiao.com/search?keyword=蔡崇信：阿里过去几年忘了真正客户)
-1. [沙利文骨折与俄空袭乌有关吗](https://so.toutiao.com/search?keyword=沙利文骨折与俄空袭乌有关吗)
 1. [小米汽车能否成为中国版“特斯拉”](https://so.toutiao.com/search?keyword=小米汽车能否成为中国版“特斯拉”)
 1. [广州提供免费借用电子香炉服务](https://so.toutiao.com/search?keyword=广州提供免费借用电子香炉服务)
 1. [网友偶遇赵丽颖重庆拍戏](https://so.toutiao.com/search?keyword=网友偶遇赵丽颖重庆拍戏)
 1. [陈红军3岁儿子懂事地安慰奶奶](https://so.toutiao.com/search?keyword=陈红军3岁儿子懂事地安慰奶奶)
-1. [上海南站火车换乘地铁无需二次安检](https://so.toutiao.com/search?keyword=上海南站火车换乘地铁无需二次安检)
 1. [伊朗安全部队在东南部打击恐怖分子](https://so.toutiao.com/search?keyword=伊朗安全部队在东南部打击恐怖分子)
-1. [野猪进村攻击老人 村民持棍棒驱赶](https://so.toutiao.com/search?keyword=野猪进村攻击老人+村民持棍棒驱赶)
-1. [《乘风踏浪》乔杉评价杨子姗](https://so.toutiao.com/search?keyword=《乘风踏浪》乔杉评价杨子姗)
-1. [财政部副部长廖岷与耶伦握手交谈](https://so.toutiao.com/search?keyword=财政部副部长廖岷与耶伦握手交谈)
 1. [床太大影响开关 姑娘想要退租](https://so.toutiao.com/search?keyword=床太大影响开关+姑娘想要退租)
 1. [姜爷爷离开卧龙神树坪](https://so.toutiao.com/search?keyword=姜爷爷离开卧龙神树坪)
-1. [黄智贤：必须要把台湾带回家](https://so.toutiao.com/search?keyword=黄智贤：必须要把台湾带回家)
 1. [碾压2名小孩的奔驰司机已投案](https://so.toutiao.com/search?keyword=碾压2名小孩的奔驰司机已投案)
-1. [麻辣烫原材料节前从全国运往天水](https://so.toutiao.com/search?keyword=麻辣烫原材料节前从全国运往天水)
 1. [南昌大风坠亡事件初查和房屋质量无关](https://so.toutiao.com/search?keyword=南昌大风坠亡事件初查和房屋质量无关)
 1. [官方回应学校要求家长到校门口执勤](https://so.toutiao.com/search?keyword=官方回应学校要求家长到校门口执勤)
 1. [墓碑上开始刻二维码了](https://so.toutiao.com/search?keyword=墓碑上开始刻二维码了)
@@ -63,7 +72,5 @@
 1. [烈士父母赴儿子生前部队为其扫墓](https://so.toutiao.com/search?keyword=烈士父母赴儿子生前部队为其扫墓)
 1. [美高官访华两国关系会回暖吗](https://so.toutiao.com/search?keyword=美高官访华两国关系会回暖吗)
 1. [姜爷爷希望福宝回中国不要改名字](https://so.toutiao.com/search?keyword=姜爷爷希望福宝回中国不要改名字)
-1. [传华为P70全系均为三角形后摄Deco](https://so.toutiao.com/search?keyword=传华为P70全系均为三角形后摄Deco)
 1. [蔡崇信：中国AI技术可能落后美国两年](https://so.toutiao.com/search?keyword=蔡崇信：中国AI技术可能落后美国两年)
-1. [央视认证《追风者》是佳作](https://so.toutiao.com/search?keyword=央视认证《追风者》是佳作)
 <!-- END TOUTIAO -->
